--- a/index.html
+++ b/index.html
@@ -11,37 +11,45 @@
 
   <body>
     <div class="container">
-      <div class="card text-center">
-        <img src="images/profile.jpg" class="profile-photo" alt="My Profile Photo">
-        <h1>Zhijian Zou</h1>
-        <h2>Junior Programmer</h2>
-        <h3>EDHEC MSc Data Analytics & Artificial Intelligence</h3>
-      </div>
-      <div class="card text-center">
-        <ul class="list-inline">
-          <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i>  Facebook</a></li>
-          <li><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i>  LinkedIN</a></li>
-          <li><a href="https://github.com" target="_blank"><i class="fab fa-github-square"></i>  GitHub</a></li>
+      <div id="sidebar">
+        <ul>
+          <li><i class="fas fa-thumbs-up"></i></li>
+          <li><i class="fas fa-wifi"></i></li>
         </ul>
       </div>
-      <div class="card text-center">
-        <table>
-          <h2 class="text-center">My Experience</h2>
-          <tbody>
-            <tr>
-              <td><img src="images/lewagon.png" id="lewagon" class="list-photo" alt="Lewagon"></td>
-              <td><p>Joined the best coding bootcamp in Lille.</p></td>
-            </tr>
-            <tr>
-              <td><img src="images/amazon.png" id="amazon" class="list-photo" alt="Amazon"></td>
-              <td><p>Joined EU Retail departement. Exceptional professional exprience.</p></td>
-            </tr>
-            <tr>
-              <td><img src="images/stootie.png" id="stootie" class="list-photo" alt="Stootie"></td>
-              <td><p>Started my path towards data analyst.</p></td>
-            </tr>
-          </tbody>
-        </table>
+      <div id="page-content">
+        <div class="card text-center">
+          <img src="images/profile.jpg" class="profile-photo" alt="My Profile Photo">
+          <h1>Zhijian Zou</h1>
+          <h2>Junior Programmer</h2>
+          <h3>EDHEC MSc Data Analytics & Artificial Intelligence</h3>
+        </div>
+        <div class="card text-center">
+          <ul class="list-inline">
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i>  Facebook</a></li>
+            <li><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i>  LinkedIN</a></li>
+            <li><a href="https://github.com" target="_blank"><i class="fab fa-github-square"></i>  GitHub</a></li>
+          </ul>
+        </div>
+        <div class="card text-center">
+          <table>
+            <h2 class="text-center">My Experience</h2>
+            <tbody>
+              <tr>
+                <td><img src="images/lewagon.png" id="lewagon" class="list-photo" alt="Lewagon"></td>
+                <td><p>Joined the best coding bootcamp in Lille.</p></td>
+              </tr>
+              <tr>
+                <td><img src="images/amazon.png" id="amazon" class="list-photo" alt="Amazon"></td>
+                <td><p>Joined EU Retail departement. Exceptional professional exprience.</p></td>
+              </tr>
+              <tr>
+                <td><img src="images/stootie.png" id="stootie" class="list-photo" alt="Stootie"></td>
+                <td><p>Started my path towards data analyst.</p></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </body>
